--- a/style.css
+++ b/style.css
@@ -3,16 +3,39 @@
   border: 0;
   box-sizing: border-box;
 }
+
 .container1,
-.container2{
-  width: 400px;
+.container2,
+.container3{
+  width: 300px;
   height: auto;
   display: inline-block;
+  float: left;
+  margin: 20px;
 }
-.container1{
+
+.container4{
+  display: flex;
+  flex-direction: column;
+  width: 300px;
+  float: right;
+  margin: 20px;
+}
+.sel_venditori,
+.sel_mesi_anno,
+#input_inserimento,
+#but_inserimento{
+  width: 300px;
+  height: 50px;
+  border: 1px solid grey;
+  border-radius: 2px;
+  margin: 10px 0;
+  padding: 10px;
+}
+/* .container1{
   margin-left: 150px;
 }
 .container2{
   float: right;
   margin-right: 150px;
-}
+} */
